chore: fixed table issues of rendere
chore: fixed table issues of rendere

--- a/packages/rich-text-astro-renderer/src/nodes/TableCell.astro
+++ b/packages/rich-text-astro-renderer/src/nodes/TableCell.astro
@@ -3,4 +3,4 @@ import { attrsToStyle } from "../transformer/attrsToStyle";
 
 const {node} = Astro.props;
 ---
-<td style={(node?.attrs ? attrsToStyle(node.attrs) : undefined) }><slot></slot></td>
+<td colspan={ node?.attrs?.colspan ? node?.attrs?.colspan : undefined} rowspan={ node?.attrs?.rowspan ? node?.attrs?.rowspan : undefined} style={(node?.attrs ? attrsToStyle(node.attrs) : undefined) }><slot></slot></td>
